# landbot

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
api/: messages.py  serializer.py  services.py  urls.py  views.py
api/factory/: __init__.py  base.py  email.py  slack.py
landbot/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
tests/: utils.py
tests/api/: test_services.py  test_views.py
tests/api/factory/: test_email.py  test_slack.py
